--- a/StartPage.css
+++ b/StartPage.css
@@ -1,169 +1,148 @@
-h1 { 
+h1 {
+	color: #FFA500;
+	font-weight: 200;
+	font-size: 70px;
+	text-transform: uppercase;
+	text-shadow: 10px 10px 20px #242424;
+}
 
-    color: #FFA500; 
-    
-    font-weight: 200; 
-    
-    font-size: 70px; 
-    
-    text-transform: uppercase; 
-    
-    text-shadow: 10px 10px 20px #242424; 
-    
-    } 
-    
-     
-    
-     
-    
-    body { 
-    
-    background-color: #474747; 
-    
-    color: #000000; 
-    
-    font-family: "Arial"; 
-    
-    font-weight: 200; 
-    
-    } 
-    
-     
-    
-    #body { 
-    
-    display: flex; 
-    
-    flex-direction: column; 
-    
-    align-items: center; 
-    
-    justify-content: center; 
-    
-    } 
-    
-     
-    
-    img { 
-    
-    margin: 2pc auto 0; 
-    
-    height: 100px; 
-    
-    border-radius: 50%; 
-    
-    } 
-    
-     
-    
-    p { 
-    
-    margin: 0pc; 
-    
-    color: #FFA500; 
-    
-    font-family: Arial; 
-    
-    font-size: 16px; 
-    
-    font-weight: 200; 
-    
-    text-transform: uppercase; 
-    
-    } 
-    
-     
-    
-    #btn1 { 
-    
-    margin: 2pc auto 0; 
-    
-    padding: 30px 40px; 
-    
-    background-color: #474747; 
-    
-    color: #FFA500; 
-    
-    font-size: 20px; 
-    
-    text-align:center; 
-    
-    border: 1px solid #FFA500; 
-    
-    text-transform: uppercase; 
-    
-    text-decoration: none; 
-    
-    font-family: "Arial"; 
-    
-     
-    
-    letter-spacing: 4px; 
-    
-    outline: none; 
-    
-    } 
-    
-     
-    
-    #btn1:hover { 
-    
-    transition: 0.2s; 
-    
-    color: #474747 ; 
-    
-    background-color: #FFA500; 
-    
-    text-decoration: none; 
-    
-    box-shadow: 10px 10px 20px #242424; 
-    
-    } 
-    
-     
-    
-    #btn2 { 
-    
-    margin: 2pc auto 0; 
-    
-    padding: 15px 25px; 
-    
-    background-color: #474747; 
-    
-    color: #FFA500; 
-    
-    font-size: 12px; 
-    
-    text-align:center; 
-    
-    border: 1px solid #FFA500; 
-    
-    text-transform: uppercase; 
-    
-    text-decoration: none; 
-    
-    font-family: "Arial"; 
-    
-     
-    
-    letter-spacing: 4px; 
-    
-    outline: none; 
-    
-    } 
-    
-     
-    
-    #btn2:hover { 
-    
-    transition: 0.2s; 
-    
-    color: #474747 ; 
-    
-    background-color: #FFA500; 
-    
-    text-decoration: none; 
-    
-    box-shadow: 10px 10px 20px #242424; 
-    
-    } 
+
+body {
+	background-color: #474747;
+	color: #000000;
+	font-family: "Arial";
+	font-weight: 200;
+}
+
+#body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+
+.word {
+	margin: auto;
+  	width: 15%;
+  	padding: 10px;
+	display: inline-flex;
+	justify-content: center;
+	white-space: nowrap; 
+	color: #FFA500;
+	position: relative;
+	top: -30px;
+	}
+
+.word span {
+	position: absolute;
+	overflow: hidden;
+	animation: animate 10s linear infinite;
+	opacity:0;
+}
+@keyframes animate {
+	0% {
+		opacity: 0;
+		transform: translateY(-40px);
+	}
+	2% {
+		opacity: 1;
+		transform: translateY(0px);
+	}
+	27% {
+		opacity: 0;
+		transform: translateY(0px);
+	}
+	80% {
+		opacity: 0;
+		transform: translateY(0px);
+	}
+	100% {
+		opacity 0;
+		transform: translateY(40px);
+	}
+}
+.word span:nth-child(1) {
+	animation-delay: 0s;
+}
+.word span:nth-child(2) {
+	animation-delay: 3.5s;
+}
+.word span:nth-child(3) {
+	animation-delay: 6.5s;
+}
+
+
+img {
+	margin: 2pc auto 0;
+	height: 100px;
+	border-radius: 50%;
+}
+
+p {
+	margin: 0pc;
+	color: #FFA500;
+	font-family: Arial;
+	font-size: 16px;
+	font-weight: 200;
+	text-transform: uppercase;
+}
+
+input {
+	margin: 1pc auto 0;
+	padding: 10px 10px;
+	color: #FFA500;
+	font-family: Arial;
+	border-color: #FFA500;
+	background-color: #474747;
+	box-shadow: 0px 0px 20px 0px #303030;
+}
+
+#button1 {
+	margin: 2pc auto 0;
+	padding: 30px 40px;
+	background-color: #474747;
+	color: #FFA500;
+	font-size: 20px;
+	text-align:center;
+	border: 1px solid #FFA500;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-family: "Arial";
+
+	letter-spacing: 4px;
+	outline: none;
+}
+
+#button1:hover {
+	transition: 0.2s;
+	color: #474747 ;
+	background-color: #FFA500;
+	text-decoration: none;
+	box-shadow: 10px 10px 20px #242424;
+}
+
+#button2 {
+	margin: 2pc auto 0;
+	padding: 15px 25px;
+	background-color: #474747;
+	color: #FFA500;
+	font-size: 12px;
+	text-align:center;
+	border: 1px solid #FFA500;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-family: "Arial";
+
+	letter-spacing: 4px;
+	outline: none;
+}
+
+#button2:hover {
+	transition: 0.2s;
+	color: #474747 ;
+	background-color: #FFA500;
+	text-decoration: none;
+	box-shadow: 10px 10px 20px #242424;
+}
+
