--- a/StartPage.css
+++ b/StartPage.css
@@ -133,7 +133,20 @@ input {
 	text-transform: uppercase;
 	text-decoration: none;
 	font-family: "Arial";
-
+	letter-spacing: 4px;
+	outline: none;
+}
+#button3 {
+	margin: 2pc auto 0;
+	padding: 15px 25px;
+	background-color: #474747;
+	color: #FFA500;
+	font-size: 12px;
+	text-align:center;
+	border: 1px solid #FFA500;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-family: "Arial";
 	letter-spacing: 4px;
 	outline: none;
 }
