--- a/StartPage.css
+++ b/StartPage.css
@@ -136,6 +136,15 @@ input {
 	letter-spacing: 4px;
 	outline: none;
 }
+
+#button2:hover {
+	transition: 0.2s;
+	color: #474747 ;
+	background-color: #FFA500;
+	text-decoration: none;
+	box-shadow: 10px 10px 20px #242424;
+}
+
 #button3 {
 	margin: 2pc auto 0;
 	padding: 15px 25px;
@@ -151,7 +160,8 @@ input {
 	outline: none;
 }
 
-#button2:hover {
+
+#button3:hover {
 	transition: 0.2s;
 	color: #474747 ;
 	background-color: #FFA500;
