--- a/StartPage.css
+++ b/StartPage.css
@@ -6,6 +6,10 @@ h1 {
 	text-shadow: 10px 10px 20px #242424;
 }
 
+.Heading{
+	text-align: center;
+}
+
 
 body {
 	background-color: #474747;
@@ -96,6 +100,7 @@ input {
 	border-color: #FFA500;
 	background-color: #474747;
 	box-shadow: 0px 0px 20px 0px #303030;
+	width: 250px;
 }
 
 #button1 {
@@ -109,9 +114,9 @@ input {
 	text-transform: uppercase;
 	text-decoration: none;
 	font-family: "Arial";
-
 	letter-spacing: 4px;
 	outline: none;
+	width: 350px;
 }
 
 #button1:hover {
@@ -135,6 +140,7 @@ input {
 	font-family: "Arial";
 	letter-spacing: 4px;
 	outline: none;
+	width: 250px;
 }
 
 #button2:hover {
@@ -158,6 +164,7 @@ input {
 	font-family: "Arial";
 	letter-spacing: 4px;
 	outline: none;
+	width: 250px;
 }
 
 
