--- a/StartPage.css
+++ b/StartPage.css
@@ -67,13 +67,16 @@ body {
 	}
 }
 .word span:nth-child(1) {
-	animation-delay: 0s;
+	animation-delay: 1s;
 }
 .word span:nth-child(2) {
 	animation-delay: 3.5s;
 }
 .word span:nth-child(3) {
 	animation-delay: 6.5s;
+}
+.word span:nth-child(4) {
+	animation-delay: 9s;
 }
 
 
