--- a/map-styling.css
+++ b/map-styling.css
@@ -23,7 +23,7 @@ body {
 #w1 {
   position: absolute;
   height: 400px;
-  width: 25px;
+  width: 20px;
   background-color: black;
   right: 85%;
   top: 25%;
@@ -33,7 +33,7 @@ body {
 #w2 {
   position: absolute;
   height:400px;
-  width:25px;
+  width:20px;
   background-color:black;
   left:85%;
   top: 25%;
@@ -42,17 +42,20 @@ body {
 
 #w3 {
   position: absolute;
-  height:25px;
+  height:20px;
   width:400px;
-  background-color: black
+  background-color: black;
+  top: 85%;
+  left:25%;
 
 
 }
 
 #w4 {
   position: absolute;
-  height:25px;
+  height:20px;
   width: 400px;
   background-color: black;
-  left: 450px;
+  top: 15%;
+  left:25%;
 }
