--- a/StartPage.css
+++ b/StartPage.css
@@ -10,6 +10,14 @@ h1 {
 	text-align: center;
 }
 
+#new-user-link {
+	text-decoration: inherit;
+}
+
+#new-user-link:hover {
+	text-decoration: underline;
+}
+
 
 body {
 	background-color: #474747;
@@ -32,7 +40,7 @@ body {
   	padding: 10px;
 	display: inline-flex;
 	justify-content: center;
-	white-space: nowrap; 
+	white-space: nowrap;
 	color: #FFA500;
 	position: relative;
 	top: -30px;
@@ -203,4 +211,3 @@ input {
 	text-decoration: none;
 	box-shadow: 10px 10px 20px #242424;
 }
-
