--- a/StartPage.css
+++ b/StartPage.css
@@ -118,6 +118,8 @@ input {
 	margin-top: 30px;
 }
 #button1 {
+	display: flex; 
+	justify-content: center;
 	margin: 2pc auto 0;
 	padding: 30px 40px;
 	background-color: #474747;
