--- a/StartPage.css
+++ b/StartPage.css
@@ -52,6 +52,8 @@ body {
 	animation: animate 10s linear infinite;
 	opacity:0;
 }
+
+/* styles for the rolling text animation so each section of text has a fade out effect */
 @keyframes animate {
 	0% {
 		opacity: 0;
@@ -116,6 +118,8 @@ input {
 
 .stuff{
 	margin-top: 30px;
+
+/* styles for button to give it centre align, same colour and same size as the other buttons and also gives the box a border */
 }
 #button1 {
 	display: flex; 
@@ -134,7 +138,7 @@ input {
 	outline: none;
 	width: 350px;
 }
-
+/* background colour and the text change colour when the mouse hovers over */
 #button1:hover {
 	transition: 0.2s;
 	color: #474747 ;
@@ -142,7 +146,7 @@ input {
 	text-decoration: none;
 	box-shadow: 10px 10px 20px #242424;
 }
-
+/* styles for button to give it centre align, same colour and same size as the other buttons and also gives the box a border */
 #button2 {
 	margin: 2pc auto 0;
 	padding: 15px 25px;
@@ -159,6 +163,7 @@ input {
 	width: 250px;
 }
 
+/* background colour and the text change colour when the mouse hovers over */
 #button2:hover {
 	transition: 0.2s;
 	color: #474747 ;
@@ -167,6 +172,7 @@ input {
 	box-shadow: 10px 10px 20px #242424;
 }
 
+/* styles for button to give it centre align, same colour and same size as the other buttons and also gives the box a border */
 #button3 {
 	margin: 2pc auto 0;
 	padding: 15px 25px;
@@ -183,7 +189,7 @@ input {
 	width: 250px;
 }
 
-
+/* background colour and the text change colour when the mouse hovers over */
 #button3:hover {
 	transition: 0.2s;
 	color: #474747 ;
@@ -192,6 +198,7 @@ input {
 	box-shadow: 10px 10px 20px #242424;
 }
 
+/* styles for button to give it centre align, same colour and same size as the other buttons and also gives the box a border */
 #button4 {
 	margin: 2pc auto 0;
 	padding: 15px 25px;
@@ -208,7 +215,7 @@ input {
 	width: 250px;
 }
 
-
+/* background colour and the text change colour when the mouse hovers over */
 #button4:hover {
 	transition: 0.2s;
 	color: #474747 ;
@@ -216,7 +223,7 @@ input {
 	text-decoration: none;
 	box-shadow: 10px 10px 20px #242424;
 }
-
+/* styles for button to give it centre align, same colour and same size as the other buttons and also gives the box a border */
 #QuitButton {
 	margin-top: 500px;
 	margin: 2pc auto 0;
@@ -234,12 +241,13 @@ input {
 	position:relative;
     transition: .5s ease;
 	display: block;
-	
 }
 
+/* background colour and the text change colour when the mouse hovers over */
 #QuitButton:hover {
 	transition: 0.2s;
 	color: #474747 ;
 	background-color: #FFA500;
 	text-decoration: none;
 	box-shadow: 10px 10px 20px #242424;
+}
