--- a/StartPage.css
+++ b/StartPage.css
@@ -115,8 +115,57 @@ input {
 	box-shadow: 0px 0px 20px 0px #303030;
 	width: 250px;
 }
+.newUser{
+	margin: 2pc auto 0;
+	padding: 15px 25px;
+	background-color: #474747;
+	color: #FFA500;
+	font-size: 12px;
+	text-align:center;
+	border: 1px solid #FFA500;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-family: "Arial";
+	letter-spacing: 4px;
+	outline: none;
+	width: 250px;
+	
+}
 
-.stuff{
+.newUser:hover {
+	transition: 0.2s;
+	color: #474747 ;
+	background-color: #FFA500;
+	text-decoration: none;
+	box-shadow: 10px 10px 20px #242424;
+}
+
+/* background colour and the text change colour when the mouse hovers over */
+#button3:hover {
+	transition: 0.2s;
+	color: #474747 ;
+	background-color: #FFA500;
+	text-decoration: none;
+	box-shadow: 10px 10px 20px #242424;
+}
+
+/* styles for button to give it centre align, same colour and same size as the other buttons and also gives the box a border */
+#button4 {
+	margin: 2pc auto 0;
+	padding: 15px 25px;
+	background-color: #474747;
+	color: #FFA500;
+	font-size: 12px;
+	text-align:center;
+	border: 1px solid #FFA500;
+	text-transform: uppercase;
+	text-decoration: none;
+	font-family: "Arial";
+	letter-spacing: 4px;
+	outline: none;
+	width: 250px;
+}
+.login{
 	margin-top: 30px;
 
 /* styles for button to give it centre align, same colour and same size as the other buttons and also gives the box a border */
