--- a/Instructions.css
+++ b/Instructions.css
@@ -11,41 +11,42 @@ body {
 	font-size: 40px;
 }
 /* all instructions styles individually as they are all in there own divs */
+/* aligns the text in the centre with appropriate spacing from the top and the other instrcutions */
 .Instruction1{
 	text-align: center;
 	padding-top: 60px;
 	padding-left: 20px;
 	font-size: 18px;
 }
-
+/* aligns the text in the centre with appropriate spacing from the top and the other instrcutions */
 .Instruction2{
 	text-align: center;
 	padding-top: 60px;
 	padding-left: 20px;
 	font-size: 18px;
 }
-
+/* aligns the text in the centre with appropriate spacing from the top and the other instrcutions */
 .Instruction3{
 	text-align: center;
 	padding-top: 60px;
 	padding-left: 20px;
 	font-size: 18px;
 }
-
+/* aligns the text in the centre with appropriate spacing from the top and the other instrcutions */
 .Instruction4{
 	text-align: center;
 	padding-top: 60px;
 	padding-left: 20px;
 	font-size: 18px;
 }
-
+/* aligns the text in the centre with appropriate spacing from the top and the other instrcutions */
 .Instruction5{
 	text-align: center;
 	padding-top: 60px;
 	padding-left: 20px;
 	font-size: 18px;
 }
-
+/* styles the button in the same way as every other button to keep consistency */
 #BackButton {
 	margin-top: 500px;
 	margin: 2pc auto 0;
@@ -65,7 +66,7 @@ body {
 	display: block;
 	
 }
-
+/* font colour and background colour chnage when hovered over */
 #BackButton:hover {
 	transition: 0.2s;
 	color: #474747 ;
@@ -73,7 +74,7 @@ body {
 	text-decoration: none;
 	box-shadow: 10px 10px 20px #242424;
 }
-
+/* styles the button in the same way as every other button to keep consistency */
 #QuitButton {
 	margin-top: 500px;
 	margin: 2pc auto 0;
@@ -93,10 +94,11 @@ body {
 	display: block;
 	
 }
-
+/* font colour and background colour chnage when hovered over */
 #QuitButton:hover {
 	transition: 0.2s;
 	color: #474747 ;
 	background-color: #FFA500;
 	text-decoration: none;
 	box-shadow: 10px 10px 20px #242424;
+}
